--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 			<a class="menu_f" href="#">Товары</a>
 			<a class="menu_f" href="#">О_нас</a>
 			<a class="menu_f" href="#">Контакты</a>
+			<p class="copy">2014 © All rights reserved</p>
 		</div>
-
+	
 	</div>
 </body>
 </html>
